include_directories(jpeg-6a libpng zlib)

add_executable(gs
gs.c
gp_nofb.c
gp_unix.c
gp_unifs.c
gp_unifn.c
zcid.c
seexec.c
zchar1.c
zcharout.c
zfont1.c
zmisc1.c
iutil2.c
zmisc2.c
zusparam.c
zvmem2.c
zdps1.c
zchar42.c
zfont42.c
gstype42.c
zcie.c
zcrd.c
gscie.c
gxctable.c
zfcmap.c
gsfcmap.c
gschar0.c
gsfont0.c
zchar2.c
zfont0.c
sdctc.c
sjpegc.c
sdcte.c
sjpege.c
jpeg-6a/jcapimin.c
jpeg-6a/jcapistd.c
jpeg-6a/jcinit.c
jpeg-6a/jcomapi.c
jpeg-6a/jutils.c
sjpegerr.c
jpeg-6a/jmemmgr.c
jpeg-6a/jccoefct.c
jpeg-6a/jccolor.c
jpeg-6a/jcdctmgr.c
jpeg-6a/jchuff.c
jpeg-6a/jcphuff.c
jpeg-6a/jcmainct.c
jpeg-6a/jcmarker.c
jpeg-6a/jcmaster.c
jpeg-6a/jcparam.c
jpeg-6a/jcprepct.c
jpeg-6a/jcsample.c
jpeg-6a/jfdctint.c
zfdctc.c
zfdcte.c
sdctd.c
sjpegd.c
jpeg-6a/jdapimin.c
jpeg-6a/jdapistd.c
jpeg-6a/jdinput.c
jpeg-6a/jdphuff.c
jpeg-6a/jdcoefct.c
jpeg-6a/jdcolor.c
jpeg-6a/jddctmgr.c
jpeg-6a/jfdctfst.c
jpeg-6a/jfdctflt.c
jpeg-6a/jdhuff.c
jpeg-6a/jdmainct.c
jpeg-6a/jdmarker.c
jpeg-6a/jdmaster.c
jpeg-6a/jdmerge.c
jpeg-6a/jdpostct.c
jpeg-6a/jdsample.c
jpeg-6a/jidctint.c
jpeg-6a/jidctred.c
jpeg-6a/jidctfst.c
jpeg-6a/jidctflt.c
jpeg-6a/jquant1.c
jpeg-6a/jquant2.c
zfdctd.c
zdevice2.c
ziodev2.c
zmedia2.c
zdevcal.c
iscanbin.c
zbseq.c
gscolor1.c
gsht1.c
gximage3.c
zcolor1.c
zht1.c
zupath.c
ibnum.c
gsdps1.c
scantab.c
sfilter2.c
zfdecode.c
scfd.c
scfdtab.c
slzwd.c
slzwc.c
spdiff.c
spngp.c
srld.c
zfilter2.c
scfe.c
scfetab.c
shc.c
slzwce.c
srle.c
imainarg.c
gsargs.c
imain.c
gconfig.c
gscdefs.c
iconfig.c
iccinit0.c
icontext.c
idebug.c
idict.c
idparam.c
iinit.c
interp.c
iparam.c
ireclaim.c
iscan.c
iscannum.c
istack.c
iutil.c
sfilter1.c
sstring.c
stream.c
zarith.c
zarray.c
zcontrol.c
zdict.c
zfile.c
zfileio.c
zfilter.c
zfname.c
zfproc.c
zgeneric.c
ziodev.c
zmath.c
zmisc.c
zpacked.c
zrelbit.c
zstack.c
zstring.c
zsysvm.c
ztoken.c
ztype.c
zvmem.c
zchar.c
zcolor.c
zdevice.c
zfont.c
zfont2.c
zgstate.c
zht.c
zimage.c
zmatrix.c
zpaint.c
zpath.c
ialloc.c
igc.c
igcref.c
igcstr.c
ilocate.c
iname.c
isave.c
sfxstdio.c
sbcp.c
zfbcp.c
zhsb.c
gshsb.c
zpath1.c
gspath1.c
gstype1.c
gxtype1.c
gxhint1.c
gxhint2.c
gxhint3.c
gscolor2.c
gspcolor.c
gxclip2.c
gxpcmap.c
zpcolor.c
gximage4.c
gximage5.c
zcolor2.c
zcsindex.c
zht2.c
zimage2.c
zcssepr.c
gscsepr.c
sbhc.c
sbwbs.c
shcgen.c
smtf.c
zfilterx.c
spcxd.c
szlibc.c
szlibe.c
zlib/adler32.c
zlib/deflate.c
zlib/trees.c
zlib/zutil.c
szlibd.c
zlib/infblock.c
zlib/infcodes.c
zlib/inffast.c
zlib/inflate.c
zlib/inftrees.c
zlib/infutil.c
zfzlib.c
gstype2.c
gdevpipe.c
gdevprn.c
gxclist.c
gxclbits.c
gxclpage.c
gxclread.c
gxclrect.c
gxclfile.c
gxclimag.c
gxclpath.c
gdevpbm.c
gdevpdf.c
gdevpdfi.c
gdevpdfm.c
gdevpdfp.c
gdevpdft.c
gdevpsdf.c
gdevpstr.c
gsflip.c
gdevvec.c
gdevbbox.c
gdevps.c
gdevpx.c
gsalloc.c
gsbitops.c
gsbittab.c
gschar.c
gscolor.c
gscoord.c
gsdevice.c
gsdevmem.c
gsdparam.c
gsfont.c
gsht.c
gshtscr.c
gsimage.c
gsimpath.c
gsinit.c
gsiodev.c
gsline.c
gsmatrix.c
gsmemory.c
gsmisc.c
gspaint.c
gsparam.c
gspath.c
gsstate.c
gsutil.c
gxacpath.c
gxbcache.c
gxccache.c
gxccman.c
gxcht.c
gxcmap.c
gxcpath.c
gxdcconv.c
gxdcolor.c
gxdither.c
gxfill.c
gxht.c
gximage.c
gximage0.c
gximage1.c
gximage2.c
gxpaint.c
gxpath.c
gxpath2.c
gxpcopy.c
gxpdash.c
gxpflat.c
gxsample.c
gxstroke.c
gdevabuf.c
gdevddrw.c
gdevdflt.c
gdevnfwd.c
gdevmem.c
gdevm1.c
gdevm2.c
gdevm4.c
gdevm8.c
gdevm16.c
gdevm24.c
gdevm32.c
gdevmpla.c
siscale.c
gdevmrop.c
gsrop.c
gsroptab.c
)

target_link_libraries(gs m)

install(TARGETS gs
	RUNTIME DESTINATION ghostscript/bin)
